Improved blog post title color contrast and fixed the login button layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,14 +204,14 @@ p {
   background-position: right center;
 }
 
-.section-title .line {
+/* .section-title .line {
   background: -webkit-linear-gradient(#fe8464 0%, #fe6e9a 100%);
   background: -o-linear-gradient(#fe8464 0%, #fe6e9a 100%);
   background: linear-gradient(#fe8464 0%, #fe6e9a 100%);
   width: 150px;
   height: 5px;
   margin-bottom: 10px !important;
-}
+} */
 
 .join {
   background: -webkit-linear-gradient(rgb(51, 200, 193), rgb(17, 155, 210));
@@ -220,7 +220,7 @@ p {
 }
 
 .section-title .title {
-  font-size: 38px;
+
   font-weight: 700;
   line-height: 42px;
 }
@@ -265,9 +265,9 @@ p {
 }
 
 .section-title .title {
-  font-size: 32px;
+
   padding-top: 10px;
-  color: white;
+  color: #007bff;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
