--- a/navbar.css
+++ b/navbar.css
@@ -61,12 +61,19 @@ z
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
+    gap:15px;
 }
 
 .navbar-nav .nav-item {
     display: inline-block;
-    margin: 0 15px;
     padding: 0;
+}
+
+
+@media (max-width: 1320px) { /* 100% width */
+    .navbar-nav {
+        gap: 3px;
+    }
 }
 
 .navbar-nav .nav-item a {
